--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -9630,7 +9630,7 @@
     #
     # Env: LIFERAY_ADMIN_PERIOD_ANALYTICS_PERIOD_TYPES
     #
-    admin.analytics.types=google\nmatomo
+    admin.analytics.types=googleAnalytics4\ngoogle\nmatomo
 
     #
     # Add a comma delimited list of properties that are obfuscated and replaced
