LPS-163065 Add lang keys

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -7264,6 +7264,8 @@ go-to-this-version=Go to This Version
 go-to-workspace=Go to Workspace
 go-to-x=Go to {0}
 goal=Goal
+google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration
+google-analytics-4-id=Google Analytics 4 ID
 google-analytics-create-custom-configuration=Google Analytics Create Method Only Custom Configuration
 google-analytics-custom-configuration=Google Analytics Custom Configuration
 google-analytics-id=Google Analytics ID
@@ -14506,6 +14508,8 @@ set-the-discount-amount-and-the-discount-type=Set the discount amount and the di
 set-the-display-order-of-child-pages=Set the display order of child pages.
 set-the-display-order-of-news-feeds=Set the display order of news feeds.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Set the following values to filter emails associated with an email address to a folder.
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages.
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages.
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics create method's custom options that are used for this set of pages.
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics custom options that are used for this set of pages.
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Set the Google Analytics ID that is used for this set of pages.
