LPS-166110 portal-language - add keys for import strategy

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -923,6 +923,7 @@ add-option-value=Add Option Value
 add-option-value-to-x=Add Option Value to {0}
 add-options=Add Options
 add-options-separated-by-commas=Add options separated by commas.
+add-or-update-records=Add or Update Records
 add-order=Add Order
 add-order-rule=Add Order Rule
 add-order-type=Add Order Type
@@ -7776,6 +7777,7 @@ import-settings=Import Settings
 import-siteminder-users-from-ldap=Import from LDAP
 import-siteminder-users-from-ldap-help=If this is checked, users authenticated from SiteMinder that do not exist in the portal are imported from LDAP. LDAP must be enabled.
 import-status=Import Status
+import-strategy=Import Strategy
 import-structure=Import Structure
 import-task-isolation=Import Task Isolation Level
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations.
@@ -11236,6 +11238,7 @@ online-friends-x=Online Friends {0}
 online-now=Online Now
 online-training=Online Training
 only-41-characters-are-allowed=Only 41 characters are allowed.
+only-add-new-records=Only Add New Records
 only-administrators-can-use-this-portlet=Only administrators can use this portlet.
 only-allow-deleting-required-fields-in-edit-mode=Only allow deleting required fields in edit mode.
 only-delete-this-item=Only delete this item.
@@ -11256,6 +11259,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Only this event will be modified. The rest of the series will not change.
 only-this-instance=Only This Instance
 only-true-will-be-accepted=Only true will be accepted.
+only-update-records=Only Update Records
 oops=Oops
 opacity=Opacity
 open=Open
