--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -2261,6 +2261,11 @@ background-state-info=Background State Info
 background-state-success=Background State Success
 background-state-warning=Background State Warning
 background-styles=Background Styles
+background-task-manager-configuration-name=Background Task Manager Configuration
+background-task-workers-core-size=Workers Core Size
+background-task-workers-core-size-help=The number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting.
+background-task-workers-max-size=Workers Maximum Size
+background-task-workers-max-size-help=The maximum number of worker threads for executing background tasks.
 backspace=Backspace
 bad-request=Bad Request
 ban-date=Ban Date
