--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -7774,6 +7774,8 @@ import-siteminder-users-from-ldap=Import from LDAP
 import-siteminder-users-from-ldap-help=If this is checked, users authenticated from SiteMinder that do not exist in the portal are imported from LDAP. LDAP must be enabled.
 import-status=Import Status
 import-structure=Import Structure
+import-task-isolation=Import Task Isolation Level
+import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default value is GROUP, this means that only one site template propagation import task can run at the same time for the same target site. However, you can set its value to COMPANY as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal, in exchange for delaying site template propagations.
 import-translation=Import Translation
 import-translations=Import Translations
 import-user-preferences-help=User preferences can only be successfully imported when the user UUIDs match.
@@ -8969,6 +8971,8 @@ layout-set-prototype-configuration-description=Configure when automatic propagat
 layout-set-prototype-configuration-name=Site Templates
 layout-set-prototype-intranet-site-description=Site with Documents and News
 layout-set-prototype-intranet-site-title=Intranet Site
+layout-set-prototype-system-configuration-description=Configure system level site template options
+layout-set-prototype-system-configuration-name=Site Templates
 layout-template=Layout Template
 layout-template-1-2-1-columns-i=1-2-1 Columns (50/50)
 layout-template-1-2-1-columns-ii=1-2-1 Columns (70/30)
