LPS-164521 Turn on oracle String type column index length restriction, set length to 255

--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -1403,9 +1403,11 @@
     #
     # Env: LIFERAY_DATABASE_PERIOD_STRING_PERIOD_INDEX_PERIOD_MAX_PERIOD_LENGTH_OPENBRACKET_MARIADB_CLOSEBRACKET_
     # Env: LIFERAY_DATABASE_PERIOD_STRING_PERIOD_INDEX_PERIOD_MAX_PERIOD_LENGTH_OPENBRACKET_MYSQL_CLOSEBRACKET_
+    # Env: LIFERAY_DATABASE_PERIOD_STRING_PERIOD_INDEX_PERIOD_MAX_PERIOD_LENGTH_OPENBRACKET_ORACLE_CLOSEBRACKET_
     #
     database.string.index.max.length[mariadb]=255
     database.string.index.max.length[mysql]=255
+    database.string.index.max.length[oracle]=255
 
     #
     # Specify any database vendor specific settings.
