--- a/modules/apps/archived/web-proxy-web/build.gradle
+++ b/modules/apps/archived/web-proxy-web/build.gradle
@@ -2,7 +2,6 @@ dependencies {
 	compileInclude group: "com.liferay", name: "org.portletbridge.core", version: "1.1.2"
 	compileInclude group: "com.liferay", name: "org.portletbridge.portlet", version: "1.1.2"
 	compileInclude group: "concurrent", name: "concurrent", version: "1.3.4"
-	compileInclude group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
 
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.impl", version: "default"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
@@ -10,6 +9,7 @@ dependencies {
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.1"
 	compileOnly group: "javax.servlet.jsp", name: "javax.servlet.jsp-api", version: "2.3.1"
 	compileOnly group: "org.apache.felix", name: "org.apache.felix.http.servlet-api", version: "1.1.2"
+	compileOnly group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component", version: "1.4.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.4.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.http.whiteboard", version: "1.0.0"
