--- a/modules/apps/portal-store/portal-store-gcs/build.gradle
+++ b/modules/apps/portal-store/portal-store-gcs/build.gradle
@@ -29,7 +29,6 @@ dependencies {
 	compileInclude group: "io.opencensus", name: "opencensus-api", version: "0.28.3"
 	compileInclude group: "io.opencensus", name: "opencensus-contrib-http-util", version: "0.28.3"
 	compileInclude group: "joda-time", name: "joda-time", version: "2.8.1"
-	compileInclude group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
 	compileInclude group: "org.apache.httpcomponents", name: "httpcore", version: "4.4.14"
 	compileInclude group: "org.codehaus.jackson", name: "jackson-core-asl", version: "1.9.11"
 	compileInclude group: "org.threeten", name: "threetenbp", version: "1.5.0"
@@ -38,6 +37,7 @@ dependencies {
 	compileOnly group: "com.fasterxml.jackson.core", name: "jackson-core", version: "2.13.4"
 	compileOnly group: "com.google.code.gson", name: "gson", version: "2.9.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
+	compileOnly group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.4.0"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
 	compileOnly project(":apps:static:portal-configuration:portal-configuration-metatype-api")
