--- a/modules/apps/push-notifications/push-notifications-sender/push-notifications-sender-sms/build.gradle
+++ b/modules/apps/push-notifications/push-notifications-sender/push-notifications-sender-sms/build.gradle
@@ -4,11 +4,11 @@ dependencies {
 	compileInclude group: "io.jsonwebtoken", name: "jjwt-api", version: "0.11.2"
 	compileInclude group: "io.jsonwebtoken", name: "jjwt-impl", version: "0.11.2"
 	compileInclude group: "io.jsonwebtoken", name: "jjwt-jackson", version: "0.11.2"
-	compileInclude group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
 	compileInclude group: "org.apache.httpcomponents", name: "httpcore", version: "4.4.14"
 
 	compileOnly group: "com.liferay", name: "biz.aQute.bnd.annotation", version: "4.2.0.LIFERAY-PATCHED-2"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
+	compileOnly group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.4.0"
 	compileOnly project(":apps:push-notifications:push-notifications-api")
 	compileOnly project(":apps:static:portal-configuration:portal-configuration-metatype-api")
