--- a/modules/dxp/apps/portal-search-elasticsearch-monitoring/portal-search-elasticsearch-monitoring-web/build.gradle
+++ b/modules/dxp/apps/portal-search-elasticsearch-monitoring/portal-search-elasticsearch-monitoring-web/build.gradle
@@ -1,5 +1,4 @@
 dependencies {
-	compileInclude group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
 	compileInclude group: "org.apache.httpcomponents", name: "httpcore", version: "4.4.14"
 	compileInclude group: "org.mitre.dsmiley.httpproxy", name: "smiley-http-proxy-servlet", version: "1.7"
 
@@ -9,6 +8,7 @@ dependencies {
 	compileOnly group: "com.liferay.portal", name: "com.liferay.util.taglib", version: "default"
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.1"
 	compileOnly group: "org.apache.felix", name: "org.apache.felix.http.servlet-api", version: "1.1.2"
+	compileOnly group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
 	compileOnly group: "org.osgi", name: "org.osgi.service.cm", version: "1.6.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.4.0"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
