--- a/modules/dxp/apps/sharepoint-soap/sharepoint-soap-repository/build.gradle
+++ b/modules/dxp/apps/sharepoint-soap/sharepoint-soap-repository/build.gradle
@@ -22,7 +22,6 @@ dependencies {
 	compileInclude group: "org.apache.axis2", name: "axis2-transport-http", version: "1.8.0"
 	compileInclude group: "org.apache.axis2", name: "axis2-transport-local", version: "1.8.0"
 	compileInclude group: "org.apache.axis2", name: "axis2-xmlbeans", version: "1.8.0"
-	compileInclude group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
 	compileInclude group: "org.apache.httpcomponents", name: "httpcore", version: "4.4.14"
 	compileInclude group: "org.apache.neethi", name: "neethi", version: "3.1.1"
 	compileInclude group: "org.apache.woden", name: "woden-api", version: "1.0M9"
@@ -33,6 +32,7 @@ dependencies {
 	compileInclude group: "wsdl4j", name: "wsdl4j", version: "1.6.3"
 
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
+	compileOnly group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.4.0"
 	compileOnly project(":apps:document-library:document-library-repository-external-api")
 	compileOnly project(":core:petra:petra-function")
