--- a/modules/dxp/apps/sharepoint-rest/sharepoint-rest-repository/build.gradle
+++ b/modules/dxp/apps/sharepoint-rest/sharepoint-rest-repository/build.gradle
@@ -1,6 +1,5 @@
 dependencies {
 	compileInclude group: "com.mashape.unirest", name: "unirest-java", version: "1.4.9"
-	compileInclude group: "org.apache.httpcomponents", name: "httpasyncclient", version: "4.1.4"
 	compileInclude group: "org.apache.httpcomponents", name: "httpcore", version: "4.4.14"
 	compileInclude group: "org.apache.httpcomponents", name: "httpcore-nio", version: "4.4.14"
 	compileInclude group: "org.apache.httpcomponents", name: "httpmime", version: "4.5.13"
@@ -10,6 +9,7 @@ dependencies {
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.1"
 	compileOnly group: "org.apache.felix", name: "org.apache.felix.http.servlet-api", version: "1.1.2"
+	compileOnly group: "org.apache.httpcomponents", name: "httpasyncclient", version: "4.1.4"
 	compileOnly group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
 	compileOnly group: "org.json", name: "json", version: "20220320"
 	compileOnly group: "org.osgi", name: "org.osgi.service.cm", version: "1.6.0"
