--- a/modules/dxp/apps/portal-reports-engine-console/portal-reports-engine-console-jasper/build.gradle
+++ b/modules/dxp/apps/portal-reports-engine-console/portal-reports-engine-console-jasper/build.gradle
@@ -13,7 +13,6 @@ dependencies {
 	compileInclude group: "net.sourceforge.jexcelapi", name: "jxl", version: "2.6.10"
 	compileInclude group: "org.apache.commons", name: "commons-dbcp2", version: "2.0"
 	compileInclude group: "org.apache.commons", name: "commons-pool2", version: "2.4.2"
-	compileInclude group: "org.apache.httpcomponents", name: "httpcore", version: "4.4.14"
 	compileInclude group: "org.apache.lucene", name: "lucene-analyzers-common", version: "7.1.0"
 	compileInclude group: "org.apache.lucene", name: "lucene-core", version: "7.1.0"
 	compileInclude group: "org.apache.lucene", name: "lucene-queries", version: "7.1.0"
@@ -31,6 +30,7 @@ dependencies {
 	compileOnly group: "org.apache.commons", name: "commons-math3", version: "3.6.1"
 	compileOnly group: "org.apache.felix", name: "org.apache.felix.http.servlet-api", version: "1.1.2"
 	compileOnly group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
+	compileOnly group: "org.apache.httpcomponents", name: "httpcore", version: "4.4.14"
 	compileOnly group: "org.apache.poi", name: "poi", version: "5.2.2"
 	compileOnly group: "org.apache.poi", name: "poi-ooxml", version: "5.2.2"
 	compileOnly group: "org.apache.poi", name: "poi-ooxml-lite", version: "5.2.2"
