--- a/modules/apps/commerce/commerce-report-impl/build.gradle
+++ b/modules/apps/commerce/commerce-report-impl/build.gradle
@@ -12,7 +12,6 @@ dependencies {
 	compileInclude group: "net.sourceforge.jexcelapi", name: "jxl", version: "2.6.10"
 	compileInclude group: "org.apache.commons", name: "commons-dbcp2", version: "2.0"
 	compileInclude group: "org.apache.commons", name: "commons-pool2", version: "2.4.2"
-	compileInclude group: "org.apache.httpcomponents", name: "httpcore", version: "4.4.14"
 	compileInclude group: "org.apache.lucene", name: "lucene-analyzers-common", version: "7.1.0"
 	compileInclude group: "org.apache.lucene", name: "lucene-core", version: "7.1.0"
 	compileInclude group: "org.apache.lucene", name: "lucene-queries", version: "7.1.0"
@@ -28,6 +27,7 @@ dependencies {
 	compileOnly group: "org.apache.commons", name: "commons-collections4", version: "4.4"
 	compileOnly group: "org.apache.commons", name: "commons-math3", version: "3.6.1"
 	compileOnly group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
+	compileOnly group: "org.apache.httpcomponents", name: "httpcore", version: "4.4.14"
 	compileOnly group: "org.apache.poi", name: "poi", version: "5.2.2"
 	compileOnly group: "org.apache.poi", name: "poi-ooxml", version: "5.2.2"
 	compileOnly group: "org.apache.poi", name: "poi-ooxml-lite", version: "5.2.2"
