--- a/modules/dxp/apps/commerce-avalara/commerce-avalara-connector-api/build.gradle
+++ b/modules/dxp/apps/commerce-avalara/commerce-avalara-connector-api/build.gradle
@@ -1,6 +1,5 @@
 dependencies {
 	compileInclude group: "net.avalara.avatax", name: "avatax-rest-v2-api-java_2.11", version: "20.6.0"
-	compileInclude group: "org.apache.httpcomponents", name: "httpcore", version: "4.4.14"
 
 	compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
 	compileOnly group: "com.google.code.gson", name: "gson", version: "2.9.0"
@@ -8,6 +7,7 @@ dependencies {
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.1"
 	compileOnly group: "org.apache.felix", name: "org.apache.felix.http.servlet-api", version: "1.1.2"
 	compileOnly group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
+	compileOnly group: "org.apache.httpcomponents", name: "httpcore", version: "4.4.14"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.4.0"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
 	compileOnly project(":apps:commerce:commerce-account-api")
