--- a/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-fido2-web/build.gradle
+++ b/modules/dxp/apps/multi-factor-authentication/multi-factor-authentication-fido2-web/build.gradle
@@ -11,7 +11,6 @@ dependencies {
 	compileInclude group: "com.yubico", name: "webauthn-server-core-minimal", version: "1.12.2"
 	compileInclude group: "com.yubico", name: "yubico-util", version: "1.12.2"
 	compileInclude group: "net.i2p.crypto", name: "eddsa", version: "0.3.0"
-	compileInclude group: "org.apache.httpcomponents", name: "httpcore", version: "4.4.14"
 	compileInclude group: "org.bouncycastle", name: "bcprov-jdk15on", version: "1.69"
 	compileInclude group: "org.bouncycastle", name: "bcutil-jdk15on", version: "1.69"
 	compileInclude group: "org.checkerframework", name: "checker-qual", version: "2.11.1"
@@ -26,6 +25,7 @@ dependencies {
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "3.0.1"
 	compileOnly group: "org.apache.felix", name: "org.apache.felix.http.servlet-api", version: "1.1.2"
 	compileOnly group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
+	compileOnly group: "org.apache.httpcomponents", name: "httpcore", version: "4.4.14"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.4.0"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
 	compileOnly group: "org.slf4j", name: "slf4j-api", version: "1.7.26"
