LPS-168749 change compileInclude to compileOnly for httpmime because we have export httpmime in shared-dependencies

--- a/modules/dxp/apps/saml/saml-opensaml-integration/build.gradle
+++ b/modules/dxp/apps/saml/saml-opensaml-integration/build.gradle
@@ -8,7 +8,6 @@ dependencies {
 	compileInclude group: "joda-time", name: "joda-time", version: "2.9"
 	compileInclude group: "net.shibboleth.utilities", name: "java-support", version: "7.3.0"
 	compileInclude group: "org.apache.httpcomponents", name: "httpclient-cache", version: "4.5.13"
-	compileInclude group: "org.apache.httpcomponents", name: "httpmime", version: "4.5.13"
 	compileInclude group: "org.bouncycastle", name: "bcpkix-jdk15on", version: "1.69"
 	compileInclude group: "org.bouncycastle", name: "bcprov-jdk15on", version: "1.69"
 	compileInclude group: "org.bouncycastle", name: "bcutil-jdk15on", version: "1.69"
@@ -27,6 +26,7 @@ dependencies {
 	compileOnly group: "org.apache.felix", name: "org.apache.felix.http.servlet-api", version: "1.1.2"
 	compileOnly group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
 	compileOnly group: "org.apache.httpcomponents", name: "httpcore", version: "4.4.14"
+	compileOnly group: "org.apache.httpcomponents", name: "httpmime", version: "4.5.13"
 	compileOnly group: "org.apache.santuario", name: "xmlsec", version: "2.1.7"
 	compileOnly group: "org.opensaml", name: "opensaml-core", version: "3.3.0"
 	compileOnly group: "org.opensaml", name: "opensaml-messaging-api", version: "3.3.0"
