--- a/modules/apps/static/portal-osgi-web/portal-osgi-web-portlet-container-test-util/build.gradle
+++ b/modules/apps/static/portal-osgi-web/portal-osgi-web-portlet-container-test-util/build.gradle
@@ -1,6 +1,4 @@
 dependencies {
-	compileInclude group: "org.apache.httpcomponents", name: "httpmime", version: "4.5.13"
-
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.impl", version: "default"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.test", version: "default"
@@ -10,6 +8,7 @@ dependencies {
 	compileOnly group: "org.apache.felix", name: "org.apache.felix.http.servlet-api", version: "1.1.2"
 	compileOnly group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
 	compileOnly group: "org.apache.httpcomponents", name: "httpcore", version: "4.4.14"
+	compileOnly group: "org.apache.httpcomponents", name: "httpmime", version: "4.5.13"
 	compileOnly group: "org.springframework", name: "spring-test", version: "5.2.22.RELEASE"
 	compileOnly group: "org.springframework", name: "spring-web", version: "5.2.22.RELEASE"
 	compileOnly project(":core:petra:petra-memory")
