--- a/modules/apps/commerce/commerce-application-list/build.gradle
+++ b/modules/apps/commerce/commerce-application-list/build.gradle
@@ -3,4 +3,5 @@ dependencies {
 	compileOnly group: "org.apache.felix", name: "org.apache.felix.http.servlet-api", version: "1.1.2"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.4.0"
 	compileOnly project(":apps:application-list:application-list-api")
+	compileOnly project(":apps:portal-search:portal-search-api")
 }
