--- a/modules/dxp/apps/portal-workflow/portal-workflow-metrics-web/build.gradle
+++ b/modules/dxp/apps/portal-workflow/portal-workflow-metrics-web/build.gradle
@@ -9,6 +9,7 @@ dependencies {
 	compileOnly project(":apps:frontend-js:frontend-js-loader-modules-extender-api")
 	compileOnly project(":apps:frontend-taglib:frontend-taglib")
 	compileOnly project(":apps:frontend-taglib:frontend-taglib-react")
+	compileOnly project(":apps:portal-search:portal-search-api")
 	compileOnly project(":core:petra:petra-sql-dsl-api")
 	compileOnly project(":core:petra:petra-string")
 }
