LPS-171228 add joda-time and joda-convert to source-formatter

--- a/modules/source-formatter.properties
+++ b/modules/source-formatter.properties
@@ -55,6 +55,7 @@
         javax.validation:validation-api:2.0.1.Final,\
         javax.ws.rs:javax.ws.rs-api:2.1,\
         javax.xml.bind:jaxb-api:2.3.0,\
+        joda-time:joda-time:2.12.1,\
         junit:junit:4.13.1,\
         net.htmlparser.jericho:jericho-html:3.1,\
         net.minidev:accesors-smart:2.4.2,\
@@ -77,6 +78,7 @@
         org.apache.cxf:cxf-rt-rs-security-oauth2:3.4.4,\
         org.apache.cxf:cxf-rt-security:3.4.4,\
         org.apache.cxf:cxf-rt-transports-http:3.4.4,\
+        org.joda:joda-convert:2.2.1,\
         org.apache.cxf:cxf-rt-transports-http:3.4.4,\
         org.apache.cxf:cxf-rt-ws-addr:3.4.4,\
         org.apache.cxf:cxf-rt-ws-policy:3.4.4,\
