LPS-169795 Create FragmentCollectionFilterTags

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -17800,6 +17800,7 @@ two-letter-iso-code=Two-Letter ISO Code
 txtai-host-address=txtai Host Address
 type=Type
 type-a-comma-or-press-enter-to-input-a-synonym=Type a comma or press enter to input a synonym.
+type-a-comma-or-press-enter-to-input-a-tag=Type a comma or press enter to input a tag.
 type-a-comma-or-press-enter-to-input-email-addresses=Type a comma or press enter to input email addresses.
 type-a-comma-or-press-enter-to-input-roles=Type a comma or press enter to input roles.
 type-a-single-email-address=Type a single email address:
