--- a/modules/source-formatter.properties
+++ b/modules/source-formatter.properties
@@ -60,6 +60,7 @@
         net.minidev:accesors-smart:2.4.2,\
         net.minidev:json-smart:2.4.5,\
         org.apache.ant:ant:1.10.11,\
+        org.apache.commons:commons-collections4:4.4,\
         org.apache.commons:commons-compress:1.21,\
         org.apache.cxf:cxf-core:3.4.4,\
         org.apache.cxf:cxf-rt-bindings-soap:3.4.4,\
