--- a/modules/apps/commerce/headless/headless-commerce/headless-commerce-delivery-catalog-test/build.gradle
+++ b/modules/apps/commerce/headless/headless-commerce/headless-commerce-delivery-catalog-test/build.gradle
@@ -8,7 +8,11 @@ dependencies {
 	testIntegrationCompile group: "javax.validation", name: "validation-api", version: "2.0.1.Final"
 	testIntegrationCompile group: "javax.ws.rs", name: "javax.ws.rs-api", version: "2.1"
 	testIntegrationCompile group: "junit", name: "junit", version: "4.13.1"
+	testIntegrationCompile project(":apps:account:account-api")
 	testIntegrationCompile project(":apps:commerce:commerce-product-api")
+	testIntegrationCompile project(":apps:commerce:commerce-product-test-util")
+	testIntegrationCompile project(":apps:commerce:commerce-test-util")
+	testIntegrationCompile project(":apps:commerce:commerce-wish-list-api")
 	testIntegrationCompile project(":apps:commerce:headless:headless-commerce:headless-commerce-delivery-catalog-api")
 	testIntegrationCompile project(":apps:commerce:headless:headless-commerce:headless-commerce-delivery-catalog-client")
 	testIntegrationCompile project(":apps:portal-odata:portal-odata-api")
