--- a/modules/apps/commerce/headless/headless-commerce/headless-commerce-admin-account-impl/build.gradle
+++ b/modules/apps/commerce/headless/headless-commerce/headless-commerce-admin-account-impl/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 	compileOnly project(":apps:commerce:commerce-discount-api")
 	compileOnly project(":apps:commerce:commerce-price-list-api")
 	compileOnly project(":apps:commerce:commerce-product-api")
+	compileOnly project(":apps:commerce:commerce-shipping-engine-fixed-api")
 	compileOnly project(":apps:commerce:commerce-term-api")
 	compileOnly project(":apps:commerce:headless:headless-commerce-core-api")
 	compileOnly project(":apps:commerce:headless:headless-commerce:headless-commerce-admin-account-api")
