LPS-168143 buildLang for error messages

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -7240,6 +7240,7 @@ go-to-parent-fragment-to-edit=Go to parent fragment to edit.
 go-to-paypal-and-set-up-ipn-to-post-to-x=Go to PayPal and set up IPN to post to {0}.
 go-to-profile-pages=Go to Profile Pages
 go-to-remote-live=Go to Remote Live
+go-to-segments=Go to Segments
 go-to-staging=Go to Staging
 go-to-submission-page=Go to Submission Page
 go-to-test-details=Go to A/B Test Details
@@ -14047,6 +14048,7 @@ see-thumbnail=See Thumbnail
 see-x-for-more-information=See {0} for more information.
 segment=Segment
 segment-name-is-required=Segment name is required.
+segment-not-found=Segment Not Found
 segment-x=Segment: {0}
 segmentation-enabled-description=Disable this option to prevent user segmentation on every request. If disabled, collections and experiences personalization will not be available.
 segmentation-enabled-name=Enable Segmentation
@@ -16240,6 +16242,7 @@ the-country-could-not-be-found=The country could not be found.
 the-coupon-could-not-be-found=The coupon could not be found.
 the-creation-of-the-instance-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the instance may take some time. Closing the window will not cancel the process.
 the-creation-of-the-site-may-take-some-time-.closing-the-window-will-not-cancel-the-process=The creation of the site may take some time. Closing the window will not cancel the process.
+the-criteria-used-in-this-segment-is-no-longer-available=The criteria used in this segment is no longer available.
 the-current-number-of-items-in-this-collection-is-x=The current number of items in this collection is {0}.
 the-current-theme-does-not-support-editing-style-book-values=The current theme does not support editing style book values. To use this feature, you must change the selected theme.
 the-custom-field-could-not-be-found=The custom field could not be found.
