LPS-168928 liferay-portal: includes app in build.properties

--- a/build.properties
+++ b/build.properties
@@ -157,6 +157,7 @@
     #    apps/expando,\
     #    apps/export-import,\
     #    apps/external-reference,\
+    #    apps/feature-flag,\
     #    apps/flags,\
     #    apps/fragment,\
     #    apps/friendly-url,\
