LPS-168928 portal-impl: adds portal properties for which kinds of feature flags are visible

--- a/portal-impl/src/portal-developer.properties
+++ b/portal-impl/src/portal-developer.properties
@@ -24,6 +24,8 @@ combo.check.timestamp=true
 
 cors.disable.authorization.context.check=true
 
+feature.flag.ui.visible[dev]=true
+
 initial.system.check.enabled=true
 
 json.service.serialize.throwable=true
