--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -6554,6 +6554,25 @@
     feature.flag.LRAC-10757=false
 
 ##
+## Feature Flag Options
+##
+
+    #
+    # Env: LIFERAY_FEATURE_PERIOD_FLAG_PERIOD_UI_PERIOD_VISIBLE_OPENBRACKET_BETA_CLOSEBRACKET_
+    #
+    feature.flag.ui.visible[beta]=true
+
+    #
+    # Env: LIFERAY_FEATURE_PERIOD_FLAG_PERIOD_UI_PERIOD_VISIBLE_OPENBRACKET_DEV_CLOSEBRACKET_
+    #
+    feature.flag.ui.visible[dev]=false
+
+    #
+    # Env: LIFERAY_FEATURE_PERIOD_FLAG_PERIOD_UI_PERIOD_VISIBLE_OPENBRACKET_RELEASE_CLOSEBRACKET_
+    #
+    feature.flag.ui.visible[release]=true
+
+##
 ## HTTP
 ##
 
