LPS-168928 portal-language-lang: adds lang keys

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Dynamic Data Lists
 category.dynamic-data-mapping=Dynamic Data Mapping
 category.email=Email
 category.entertainment=Entertainment
+category.feature-flags=Feature Flags
 category.file-storage=File Storage
 category.finance=Finance
 category.form-navigator-extensions=Form Navigator Extensions
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Could not connect to the database. Please verify that the settings are correct.
 could-not-connect-to-the-liferay-marketplace=Could not connect to the Liferay Marketplace.
 could-not-save-draft-to-the-server=Could not save draft to the server.
+could-not-update-feature-flag=Could not update feature flag.
 count=Count
 counters=Counters
 countries=Countries
@@ -6591,6 +6593,12 @@ favorites=Favorites
 fax=Fax
 fax-number=Fax Number
 fbml=FBML
+feature.flag.status.description.beta=Beta Features are experimental, non-supported features. Please use them with caution.
+feature.flag.status.description.dev=Developer Features are under active development. They should never be activated unless you are on a development instance of DXP.
+feature.flag.status.description.release=Release Feature Flags provide an easy way onboard to new features in DXP. Features here are fully supported and can be activated individually and progressively. This allows users to better adapt to them and makes the DXP experience less disruptive.
+feature.flag.status.title.beta=Beta
+feature.flag.status.title.dev=Developer
+feature.flag.status.title.release=Release
 featured=Featured
 featured-content=Featured Content
 featured-image=Featured Image
@@ -6796,6 +6804,7 @@ filter-by-type=Filter by Type
 filter-by-user=Filter by User
 filter-by-user-group=Filter by User Group
 filter-by-visibility=Filter by Visibility
+filter-by-x=Filter By {0}
 filter-collection=Filter Collection
 filter-contacts=Filter Contacts
 filter-field=Filter Field
