LPS-166050 LPS-164684 portal-language-lang: Add language key for character threshold

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -3054,6 +3054,7 @@ channels-tab-description=Channels can only be assigned to a single property at a
 chapter=Chapter
 chapters=Chapters
 character-options=Character Options
+character-threshold=Character Threshold
 character-threshold-for-displaying-suggestions=Character Threshold for Displaying Suggestions
 characters=Characters
 characters-blacklist=Characters Blacklist
