LPS-170396 Adds AssetTagSAPEntryActivator, copy from AssetEntrySAPEntryActivator, no logic changes just renaming

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -14419,6 +14419,7 @@ server-version=Server Version (2010 or 2013)
 servers=Servers
 service=Service
 service-access-policy-entry-default-asset-entry-title=Public Access to the Asset Entry API
+service-access-policy-entry-default-asset-tag-title=Public Access to the Asset Tag API
 service-access-policy-entry-default-calendar-title=Public Access to the Calendar Search API
 service-access-policy-entry-default-object-title=Public Access to the Object Search API
 service-access-policy-name=Service Access Policy Name
