--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -6593,9 +6593,9 @@ favorites=Favorites
 fax=Fax
 fax-number=Fax Number
 fbml=FBML
-feature.flag.status.description.beta=Beta Features are experimental, non-supported features. Please use them with caution.
-feature.flag.status.description.dev=Developer Features are under active development. They should never be activated unless you are on a development instance of DXP.
-feature.flag.status.description.release=Release Feature Flags provide an easy way onboard to new features in DXP. Features here are fully supported and can be activated individually and progressively. This allows users to better adapt to them and makes the DXP experience less disruptive.
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution.
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP.
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively.
 feature.flag.status.title.beta=Beta
 feature.flag.status.title.dev=Developer
 feature.flag.status.title.release=Release
@@ -6804,7 +6804,7 @@ filter-by-type=Filter by Type
 filter-by-user=Filter by User
 filter-by-user-group=Filter by User Group
 filter-by-visibility=Filter by Visibility
-filter-by-x=Filter By {0}
+filter-by-x=Filter by {0}
 filter-collection=Filter Collection
 filter-contacts=Filter Contacts
 filter-field=Filter Field
