LPS-158832 Replace remote-apps with client-extensions labels

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -8338,7 +8338,7 @@ javax.portlet.title.com_liferay_calendar_web_portlet_CalendarPortlet=Calendar
 javax.portlet.title.com_liferay_change_tracking_web_portlet_PublicationsPortlet=Publications
 javax.portlet.title.com_liferay_chart_sample_web_portlet_ChartSamplePortlet=Chart Sample
 javax.portlet.title.com_liferay_clay_sample_web_portlet_ClaySamplePortlet=Clay Sample
-javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Remote Apps
+javax.portlet.title.com_liferay_client_extension_web_internal_portlet_ClientExtensionAdminPortlet=Client Extensions
 javax.portlet.title.com_liferay_comment_page_comments_web_portlet_PageCommentsPortlet=Page Comments
 javax.portlet.title.com_liferay_comment_web_portlet_CommentPortlet=Comments
 javax.portlet.title.com_liferay_commerce_account_admin_web_internal_portlet_CommerceAccountAdminPortlet=Accounts
