LPS-171030 Elasticsearch7 adds field mapping for userGroupRoleIds

--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-impl/src/main/resources/META-INF/mappings/liferay-type-mappings.json
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-impl/src/main/resources/META-INF/mappings/liferay-type-mappings.json
@@ -1649,6 +1649,10 @@
 				"store": true,
 				"type": "keyword"
 			},
+			"userGroupRoleIds": {
+				"store": true,
+				"type": "keyword"
+			},
 			"userGroupRoleNames": {
 				"normalizer": "lowercase",
 				"store": true,
