LPS-170968 Add header when active item is editable

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -2240,6 +2240,7 @@ b2x=B2X
 back=Back
 back-to-cart=Back to Cart
 back-to-menu=Back to Menu
+back-to-parent-configuration=Back To Parent Configuration
 back-to-search=Back to Search
 back-to-selection=Back to Selection
 back-to-the-list=Back to the List
