LPS-168178 portal-language-lang: Indicate the possible truststore types in the help text in ElasticsearchConfiguration and ElasticsearchConnectionConfiguration
https://issues.liferay.com/browse/LPS-168178

Signed-off-by: Tibor Lipusz <tibor.lipusz@liferay.com>

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -17768,7 +17768,7 @@ truststore-password-help=Set the password to the truststore if HTTP SSL Enabled 
 truststore-path=Truststore Path
 truststore-path-help=Set the path to the truststore file if HTTP SSL Enabled is checked.
 truststore-type=Truststore Type
-truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked.
+truststore-type-help=Set the truststore type if HTTP SSL Enabled is checked (e.g., PKCS#12 or JKS). Learn more in your JDK's KeyStore Types documentation.
 try-again=Try Again
 try-again-with-a-different-search=Try again with a different search.
 trying-to-reconnect=Trying to reconnect.
