LPS-169026 Applying batch execution performance properties for some databases to portal upgrade properties file

--- a/modules/util/portal-tools-db-upgrade-client/properties/portal-upgrade-database.properties
+++ b/modules/util/portal-tools-db-upgrade-client/properties/portal-upgrade-database.properties
@@ -21,7 +21,7 @@
 ##
 
     #jdbc.default.driverClassName=com.mysql.cj.jdbc.Driver
-    #jdbc.default.url=jdbc:mysql://localhost/lportal?characterEncoding=UTF-8&dontTrackOpenResources=true&holdResultsOpenOverStatementClose=true&serverTimezone=GMT&useFastDateParsing=false&useUnicode=true
+    #jdbc.default.url=jdbc:mysql://localhost/lportal?characterEncoding=UTF-8&dontTrackOpenResources=true&holdResultsOpenOverStatementClose=true&serverTimezone=GMT&useFastDateParsing=false&useUnicode=true&rewriteBatchedStatements=true
     #jdbc.default.username=
     #jdbc.default.password=
 
@@ -39,7 +39,7 @@
 ##
 
     #jdbc.default.driverClassName=org.postgresql.Driver
-    #jdbc.default.url=jdbc:postgresql://localhost:5432/lportal
+    #jdbc.default.url=jdbc:postgresql://localhost:5432/lportal?reWriteBatchedInserts=true
     #jdbc.default.username=sa
     #jdbc.default.password=
 
@@ -48,7 +48,7 @@
 ##
 
     #jdbc.default.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-    #jdbc.default.url=jdbc:sqlserver://localhost;databaseName=lportal
+    #jdbc.default.url=jdbc:sqlserver://localhost;databaseName=lportal?useBulkCopyForBatchInsert=true
     #jdbc.default.username=sa
     #jdbc.default.password=
 
