LRCI-3315 Add functional batches for redhat9 os docker images

--- a/test.properties
+++ b/test.properties
@@ -1165,6 +1165,7 @@
     test.batch.minimum.slave.ram[analytics-cloud-cucumber-tomcat90-mysql57-jdk8]=24
     test.batch.minimum.slave.ram[modules-integration*]=24
     test.batch.minimum.slave.ram[portal-license-smoke-jdk8]=24
+    test.batch.minimum.slave.ram[*redhat9*]=24
 
     test.batch.names=${test.batch.names[acceptance-dxp]}
 
@@ -1293,6 +1294,14 @@
         (environment.acceptance == true)
 
     test.batch.run.property.query[functional-redhat8-tomcat90-mysql57-jdk8]=\
+        (\
+            (app.server.types == null) OR \
+            (app.server.types ~ tomcat)\
+        ) AND \
+        (database.types ~ mysql) AND \
+        (environment.acceptance == true)
+
+    test.batch.run.property.query[functional-redhat9-tomcat90-mysql57-jdk8]=\
         (\
             (app.server.types == null) OR \
             (app.server.types ~ tomcat)\
@@ -4057,6 +4066,7 @@ test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][echo-db-partitio
         functional-orcllinux7-tomcat90-mysql57-jdk8,\
         functional-orcllinux8-tomcat90-mysql57-jdk8,\
         functional-redhat8-tomcat90-mysql57-jdk8,\
+        functional-redhat9-tomcat90-mysql57-jdk8,\
         functional-suse15-tomcat90-mysql57-jdk8,\
         functional-tomcat90-db2111-jdk8,\
         functional-tomcat90-db2115-jdk8,\
@@ -6166,6 +6176,7 @@ test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][echo-db-partitio
         functional-bundle-orcllinux7-tomcat90-mysql57-jdk8,\
         functional-bundle-orcllinux8-tomcat90-mysql57-jdk8,\
         functional-bundle-redhat8-tomcat90-mysql57-jdk8,\
+        functional-bundle-redhat9-tomcat90-mysql57-jdk8,\
         functional-bundle-suse15-tomcat90-mysql57-jdk8,\
         functional-bundle-tomcat-db2111-jdk8,\
         functional-bundle-tomcat-db2115-jdk8,\
@@ -6255,6 +6266,9 @@ test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][echo-db-partitio
         (portal.smoke == true)
 
     test.batch.run.property.query[functional-bundle-redhat8-tomcat90-mysql57-jdk8][portal-release]=\
+        (portal.smoke == true)
+
+    test.batch.run.property.query[functional-bundle-redhat9-tomcat90-mysql57-jdk8][portal-release]=\
         (portal.smoke == true)
 
     test.batch.run.property.query[functional-bundle-suse15-tomcat90-mysql57-jdk8][portal-release]=\
@@ -7131,6 +7145,7 @@ test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][echo-db-partitio
         functional-orcllinux7-tomcat90-mysql57-jdk8,\
         functional-orcllinux8-tomcat90-mysql57-jdk8,\
         functional-redhat8-tomcat90-mysql57-jdk8,\
+        functional-redhat9-tomcat90-mysql57-jdk8,\
         functional-suse15-tomcat90-mysql57-jdk8,\
         functional-tomcat90-db2111-jdk8,\
         functional-tomcat90-hypersonic20-jdk8,\
