--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -6512,6 +6512,11 @@
     feature.flag.LPS-166201=false
 
     #
+    # Env: LIFERAY_FEATURE_PERIOD_FLAG_PERIOD__UPPERCASEL__UPPERCASEP__UPPERCASES__MINUS__NUMBER1__NUMBER6__NUMBER6__NUMBER2__NUMBER7__NUMBER5_
+    #
+    feature.flag.LPS-166275=false
+
+    #
     # Env: LIFERAY_FEATURE_PERIOD_FLAG_PERIOD__UPPERCASEL__UPPERCASEP__UPPERCASES__MINUS__NUMBER1__NUMBER6__NUMBER6__NUMBER4__NUMBER7__NUMBER9_
     #
     feature.flag.LPS-166479=false
