LPS-166479 add themeSpritemap support to workspace task

--- a/modules/sdk/gradle-plugins-workspace/src/main/resources/com/liferay/gradle/plugins/workspace/internal/client/extension/client-extension.properties
+++ b/modules/sdk/gradle-plugins-workspace/src/main/resources/com/liferay/gradle/plugins/workspace/internal/client/extension/client-extension.properties
@@ -9,4 +9,5 @@ objectAction=com.liferay.object.internal.configuration.FunctionObjectActionExecu
 themeCSS=com.liferay.client.extension.type.configuration.CETConfiguration
 themeFavicon=com.liferay.client.extension.type.configuration.CETConfiguration
 themeJS=com.liferay.client.extension.type.configuration.CETConfiguration
+themeSpritemap=com.liferay.client.extension.type.configuration.CETConfiguration
 workflowAction=com.liferay.portal.workflow.kaleo.runtime.internal.configuration.FunctionActionExecutorImplConfiguration
