LPS-171360 Remove notifications channel infrastructure which is no longer used anywhere.

--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -779,7 +779,6 @@
         /META-INF/document-library-spring.xml,\
         /META-INF/layout-spring.xml,\
         /META-INF/model-listener-spring.xml,\
-        /META-INF/notifications-spring.xml,\
         /META-INF/prefs-spring.xml,\
         /META-INF/repository-spring.xml,\
         \
@@ -3173,8 +3172,7 @@
     # Env: LIFERAY_SERVLET_PERIOD_SESSION_PERIOD_DESTROY_PERIOD_EVENTS
     #
     servlet.session.destroy.events=\
-        com.liferay.portal.events.SessionDestroyAction,\
-        com.liferay.portal.events.ChannelSessionDestroyAction
+        com.liferay.portal.events.SessionDestroyAction
 
     #
     # Set this to true to track user clicks in memory for the duration of a
@@ -4174,8 +4172,7 @@
     # Env: LIFERAY_APPLICATION_PERIOD_STARTUP_PERIOD_EVENTS
     #
     application.startup.events=\
-        com.liferay.portal.events.AppStartupAction,\
-        com.liferay.portal.events.ChannelHubAppStartupAction
+        com.liferay.portal.events.AppStartupAction
     #application.startup.events=com.liferay.portal.events.AppStartupAction,com.liferay.portal.events.SampleAppStartupAction
 
 ##
@@ -4202,8 +4199,7 @@
     # Env: LIFERAY_APPLICATION_PERIOD_SHUTDOWN_PERIOD_EVENTS
     #
     application.shutdown.events=\
-        com.liferay.portal.events.AppShutdownAction,\
-        com.liferay.portal.events.ChannelHubAppShutdownAction
+        com.liferay.portal.events.AppShutdownAction
 
     #
     # Programmatically kill the Java process on shutdown. This is a workaround
@@ -4258,7 +4254,6 @@
     # Env: LIFERAY_LOGIN_PERIOD_EVENTS_PERIOD_POST
     #
     login.events.post=\
-        com.liferay.portal.events.ChannelLoginPostAction,\
         com.liferay.portal.events.DefaultLandingPageAction,\
         com.liferay.portal.events.LoginPostAction
 
